# Instelec

./: .env.example  .gitignore  ACCESO_PRODUCCION.txt  Dockerfile  Makefile  PLAN_DESARROLLO_v2.md  conftest.py  manage.py  pyproject.toml  pytest_playwright.ini
.github/workflows/: ci.yml  deploy-cloudrun.yml  deploy-low-cost.yml  deploy.yml
apps/: __init__.py
apps/actividades/: __init__.py  admin.py  api.py  exporters.py  importers.py  models.py  reports.py  urls.py  views.py
apps/ambiental/: __init__.py  admin.py  apps.py  models.py  reports.py  tasks.py  urls.py  views.py
apps/api/: auth.py  ratelimit.py  router.py  schemas.py  urls.py
apps/campo/: __init__.py  admin.py  api.py  apps.py  models.py  tasks.py  urls.py  validators.py  views.py
apps/core/: admin.py  mixins.py  models.py  urls.py  utils.py  validators.py  views.py
apps/cuadrillas/: __init__.py  admin.py  api.py  apps.py  models.py  urls.py  views.py
apps/financiero/: __init__.py  admin.py  apps.py  forms.py  models.py  reports.py  tasks.py  urls.py  views.py
apps/indicadores/: __init__.py  admin.py  apps.py  calculators.py  models.py  tasks.py  urls.py  views.py
apps/lineas/: __init__.py  admin.py  api.py  apps.py  importers.py  models.py  urls.py  views.py
apps/usuarios/: __init__.py  admin.py  api.py  forms.py  models.py  urls.py  views.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev_lite.py  local.py  production.py
config/sqlite_gis_backend/: __init__.py  base.py
docs/: PLAN_PRUEBAS.md
infrastructure/cloudrun/: celery-worker.yaml  service.yaml
infrastructure/docker/: Dockerfile  Dockerfile.celery  docker-compose.yml
infrastructure/scripts/: setup_gcp.sh
mobile/lib/: main.dart
requirements/: base.txt  dev_lite.txt  local.txt  local_windows.txt  production.txt
templates/: base.html
templates/actividades/: crear.html  detalle.html  editar.html  importar.html  lista.html  programacion.html
templates/ambiental/: consolidado.html  detalle.html  lista.html  permisos.html
templates/campo/: crear.html  detalle.html  evidencias.html  lista.html  procedimiento_crear.html  procedimientos_lista.html  registros.html
templates/components/: alerts.html  modal.html  navbar.html  sidebar.html
templates/core/: home.html
templates/cuadrillas/: crear.html  detalle.html  editar.html  lista.html  mapa.html
(+87 files in other folders)
